# gabberbot

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
audio/: __init__.py
audio/core/: __init__.py  engine_router.py  track.py
audio/effects/: __init__.py  distortion.py  dynamics.py  filters.py  spatial.py
audio/modulation/: __init__.py  modulator.py
audio/parameters/: synthesis_constants.py
audio/synthesis/: __init__.py  fm_engine.py  oscillators.py
cli_shared/: __init__.py  musical_context.py
cli_shared/analysis/: __init__.py  advanced_audio_analyzer.py  local_audio_analyzer.py
cli_shared/benchmarking/: __init__.py  performance_benchmark_suite.py
cli_shared/composition/: __init__.py  ai_composition_engine.py
cli_shared/evolution/: pattern_evolution_engine.py
cli_shared/generators/: __init__.py  acid_bassline.py  tuned_kick.py
cli_shared/hardware/: __init__.py  (+1 more)
cli_shared/utils/: config.py  (+3 more)
design/: ARCHITECTURE.md  CODE_AUDIT_REPORT.md  INTELLIGENCE_ARCHITECTURE.md  MIDI_CLIP_ARCHITECTURE.md  ROADMAP.md  SYNTHESIS_ENGINE.md
docs/: README.md
examples/: demo_refactored_systems.py  test_pattern_generators.py  track_architecture_demo.py
knowledge/: genre_research_prompts.md  hardcore_synthesis.md  learning_insights.md  pedalboard_presets.md  vst3_integration.md
strudel_engine/: package.json
tests/: __init__.py  audio_engine_test.py  conftest.py  realtime_audio_test.py  test_complete_pipeline.py  vst3_integration_test.py
web_interface/: __init__.py  enhanced_server.py  hardcore_web_app.py  server.py
(+99 files in other folders)
