[tool.poetry]
name = "hardcore-music-prototyper"
version = "0.1.0"
description = "AI-powered hardcore music generation system - Phase 1 Prototyper"
authors = ["Hardcore Music Production Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
numpy = "^1.24.0"
mido = "^1.3.0"
anthropic = "^0.34.0"
openai = "^1.12.0"
google-generativeai = "^0.3.0"
soundfile = "^0.12.0"
librosa = "^0.10.0"
pedalboard = "^0.9.0"
textual = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0"
mypy = "^1.5"
ruff = "^0.0.290"

[tool.poetry.scripts]
hardcore-generate = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 88
target-version = "py311"